<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    android:foreground="@color/cardview_shadow_end_color"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    tools:context=".AddPlanetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_planet_icon_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@mipmap/planet"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/name"
            android:paddingStart="15dp"
            android:layout_marginTop="50dp"
            android:textSize="16sp"
            android:background="@drawable/edit_style"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/iv_planet_icon_up"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,RtlSymmetry" />

        <LinearLayout
            android:id="@+id/expected_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/et_name"
            android:background="@drawable/edit_style"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="预期点亮时间："
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_time_update"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="点击我选择时间~"/>

        </LinearLayout>

        <EditText
            android:id="@+id/remark"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:inputType="text"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:gravity="top"
            android:paddingTop="15dp"
            android:paddingStart="15dp"
            android:hint="@string/remark"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/expected_time"
            android:background="@drawable/edit_style"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,RtlSymmetry"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/remark"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/btn_delete"
                android:text="@string/delete_planet"
                android:layout_width="120dp"
                android:background="@drawable/btn_selector"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="120dp"
                android:background="@drawable/btn_selector"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/update"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>