<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="50dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minute_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="55sp"
            android:text="00"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="55sp"
            android:textColor="@color/black"
            android:text=" : "/>

        <TextView
            android:id="@+id/second_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="55sp"
            android:text="00"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="180dp"
        android:text="@string/slogan"/>

    <com.example.myexamination.view.CountDownProgress
        android:id="@+id/countdownProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_slogan"/>

    <ImageButton
        android:id="@+id/planet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_below="@+id/tv_slogan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:src="@mipmap/planet"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/planet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/planet"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="@drawable/tv_style"
        android:textColor="@color/black"
        android:layout_marginTop="155dp"
        android:text="@string/planet_name"/>

</RelativeLayout>